Clusterfuzz issue 15636.

17. Implemented non-atomic positive lookaround assertions.

18. If a lookbehind contained a lookahead that contained another lookbehind
within it, the nested lookbehind was not correctly processed. For example, if 
/(?<=(?=(?<=a)))b/ was matched to "ab" it gave no match instead of matching 
"b".

19. Implemented pcre2_get_match_data_size().

20. Two alterations to partial matching (not yet done by JIT):

    (a) The definition of a partial match is slightly changed: if a pattern
    contains any lookbehinds, an empty partial match may be given, because this
    is another situation where adding characters to the current subject can
    lead to a full match. Example: /c*+(?<=[bc])/ with subject "ab".
    
    (b) Similarly, if a pattern could match an empty string, an empty partial 
    match may be given. Example: /(?![ab]).*/ with subject "ab". This case 
    applies only to PCRE2_PARTIAL_HARD.
    
    (c) An empty string partial hard match can be returned for \z and \Z as it
    is documented that they shouldn't match. 
    
21. A branch that started with (*ACCEPT) was not being recognized as one that
could match an empty string. 

22. Corrected pcre2_set_character_tables() tables data type: was const unsigned
char * instead of const uint8_t *, as generated by pcre2_maketables().

23. Upgraded to Unicode 12.1.0.

24. Add -jitfast command line option to pcre2test (to make all the jit options 
available directly).

25. Make pcre2test -C show if libreadline or libedit is supported.

26. If the length of one branch of a group exceeded 65535 (the maximum value
that is remembered as a minimum length), the whole group's length was 
incorrectly recorded as 65535, leading to incorrect "no match" when start-up 
optimizations were in force.

27. The "rightmost consulted character" value was not always correct; in 
particular, if a pattern ended with a negative lookahead, characters that were 
inspected in that lookahead were not included.
